# physicsEngine

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
include/: algos.h  basic-data-types.h  vector.h
include/colliders/: capsule-collider.h  collider-base.h  plane-collider.h  sphere-collider.h
include/math/: algos.h  basic-data-types.h  collision-algos.h  collision-vector.h  math-defines.h  transform.h  vector3.h
physics-engine/: CMakeLists.txt
physics-engine-tests/: CMakeLists.txt
physics-engine/include/colliders/: collider-base.h
physics-engine/include/collision/: AABB.h  broadphase.h  capsule-collider.h  collider-base.h  collision-manager.h  collision-object.h  plane-collider.h  sphere-collider.h
physics-engine/include/common/: basic-data-types.h  collision-vector.h  common.h  handles.h  math-defines.h  quaternion.h  transform.h  vector3.h
physics-engine/include/math/: algos.h  basic-data-types.h  collision-algos.h  collision-vector.h
physics-engine/src/: collision-algos.cpp  main.cpp
physics-engine/src/collision/: broadphase.cpp
physics-engine/src/common/: common.cpp
src/: collision-algos.cpp
